--- a/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
+++ b/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
@@ -16,6 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="upY-TN-CEw">
+                                <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="504" id="BLg-NL-WF3"/>
+                                </constraints>
+                            </webView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L05-NO-Zql">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -33,23 +41,15 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="upY-TN-CEw">
-                                <rect key="frame" x="0.0" y="20" width="320" height="504"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="504" id="BLg-NL-WF3"/>
-                                </constraints>
-                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="upY-TN-CEw" firstAttribute="trailing" secondItem="L05-NO-Zql" secondAttribute="trailing" id="2mo-eq-gN4"/>
                             <constraint firstItem="upY-TN-CEw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="48n-hX-iu4"/>
+                            <constraint firstItem="L05-NO-Zql" firstAttribute="trailing" secondItem="upY-TN-CEw" secondAttribute="trailing" id="D3k-cp-tur"/>
+                            <constraint firstItem="CcA-ks-73t" firstAttribute="top" secondItem="L05-NO-Zql" secondAttribute="bottom" id="M5X-a6-n5z"/>
                             <constraint firstItem="upY-TN-CEw" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" symbolic="YES" id="NFA-Jo-SpJ"/>
+                            <constraint firstItem="L05-NO-Zql" firstAttribute="leading" secondItem="upY-TN-CEw" secondAttribute="leading" id="a1z-tT-isv"/>
                             <constraint firstAttribute="trailing" secondItem="upY-TN-CEw" secondAttribute="trailing" id="a5A-kh-89e"/>
-                            <constraint firstItem="upY-TN-CEw" firstAttribute="leading" secondItem="L05-NO-Zql" secondAttribute="leading" id="eU6-Ur-HA1"/>
-                            <constraint firstItem="upY-TN-CEw" firstAttribute="bottom" secondItem="L05-NO-Zql" secondAttribute="top" id="ul9-K2-sYi"/>
                         </constraints>
                     </view>
                     <connections>
