--- a/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
+++ b/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Ps4-ii-P1A">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Ps4-ii-P1A">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -28,13 +28,13 @@
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="4CE-E7-0CY">
+                                    <barButtonItem title="Invite Players" id="4CE-E7-0CY">
                                         <connections>
                                             <action selector="shareTapped:" destination="vXZ-lx-hvc" id="Mfb-ko-NEb"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem width="222" style="plain" systemItem="fixedSpace" id="1gc-ew-qIl"/>
-                                    <barButtonItem systemItem="done" id="rTe-sp-UaY">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1gc-ew-qIl"/>
+                                    <barButtonItem title="End Game" id="rTe-sp-UaY">
                                         <connections>
                                             <action selector="doneTapped:" destination="vXZ-lx-hvc" id="ggy-dT-84l"/>
                                         </connections>
