--- a/Games/WhoIs/css/720.css
+++ b/Games/WhoIs/css/720.css
@@ -3,11 +3,11 @@
 #bodyContainer
 {
 	font-family:  "Comic Sans MS";
-	font-size: 36px;
-	width:  980px;
+	font-size: 20px;
+	width:  560;
 	min-height: 600px;
 	min-width: 600px;
-	background-image:url('../img/who_is_980.png');
+	background-image:url('../img/who_is.png');
 	background-repeat: no-repeat;
 	background-color:#deedd;
 	margin-left:auto;
@@ -15,46 +15,46 @@
 }
 .btn-center
 {
-	font-size: 64px;
+	font-size: 40px;
 	color: #5c6d66;
 	margin-top: 10px;
 	outline: 0;
 	border: 0px;
-	width: 960px;
-	height: 96px;  
+	width: 544px;
+	height: 74px;  
 	background-color: transparent;
-	background-image: url("../img/button_980.png");
+	background-image: url("../img/button.png");
 	background-repeat: no-repeat;
 	
 
 }
 .btn-center:hover{
-	background-image: url("../img/select_980.png");
+	background-image: url("../img/select.png");
 	
 }
 .stage {
-	font-size: 64px;
-	padding-top: 480px;
+	font-size: 40px;
+	padding-top: 340px;
 }
 label{
 	display: inline-block;
-	min-width: 160px;
+	min-width: 100px;
 	width:10%;
 }
 #Username{
 	/*font-family: "stencil";*/
-	font-size: 64px;
+	font-size: 40px;
 	outline: none;
-	border: 0;
+	border: 0px;
 	background-color: transparent;;
-	min-width: 960px;
-	height: 96px;
+	min-width: 544px;
+	height: 74px;
 	width:100%;
 	padding-left: 250px;
 }
 .NameHolder{
-	width: 960px;
-	height: 96px;
+	width: 544px;
+	height: 74px;
 	background-repeat: no-repeat;
-	background-image: url("../img/name_980.png");
+	background-image: url("../img/name.png");
 }
