--- a/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
+++ b/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
@@ -31,12 +31,14 @@
                                 <color key="backgroundColor" red="0.94901960784313721" green="0.93725490196078431" blue="0.84313725490196079" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
                                     <barButtonItem title="Invite Players" id="4CE-E7-0CY">
+                                        <color key="tintColor" red="0.61568627450000002" green="0.55294117649999996" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="shareTapped:" destination="vXZ-lx-hvc" id="Mfb-ko-NEb"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="1gc-ew-qIl"/>
                                     <barButtonItem title="End Game" id="rTe-sp-UaY">
+                                        <color key="tintColor" red="0.61568627450000002" green="0.55294117649999996" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="doneTapped:" destination="vXZ-lx-hvc" id="ggy-dT-84l"/>
                                         </connections>
@@ -94,14 +96,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Gears Game Center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="REY-Wo-tWR">
-                                                    <rect key="frame" x="58" y="32" width="204" height="44"/>
+                                                    <rect key="frame" x="47" y="26" width="226" height="56"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
+                                                    <color key="textColor" red="0.61568627450980395" green="0.55294117647058827" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SyI-oQ-Bm0">
-                                                    <rect key="frame" x="58" y="66" width="204" height="21"/>
+                                                    <rect key="frame" x="47" y="73" width="226" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -120,21 +122,21 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Who is ?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ue-4W-kQU">
-                                                    <rect key="frame" x="44" y="18" width="67" height="21"/>
+                                                    <rect key="frame" x="43" y="11" width="67" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Start" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Qk-cR-0ax">
-                                                    <rect key="frame" x="247" y="18" width="37" height="21"/>
+                                                    <rect key="frame" x="247" y="11" width="37" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.61568627450980395" green="0.55294117647058827" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.90980392156862744" green="0.92549019607843142" blue="0.81960784313725488" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
