--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/720.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/720.css
@@ -45,6 +45,13 @@ label{
 	min-width: 100px;
 	width:10%;
 }
+.NameHolder{
+	width: 544px;
+	height: 74px;
+	background-repeat: no-repeat;
+	margin-top: 60px;
+	background-image: url("../img/name.png");
+}
 #Username{
 	/*font-family: "stencil";*/
 	font-size: 40px;
@@ -55,10 +62,4 @@ label{
 	height: 74px;
 	width:100%;
 	padding-left: 250px;
-}
-.NameHolder{
-	width: 544px;
-	height: 74px;
-	background-repeat: no-repeat;
-	background-image: url("../img/name.png");
 }
