--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/980.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/980.css
@@ -4,7 +4,7 @@
 {
 	font-family:  "Comic Sans MS";
 	font-size: 36px;
-	width:  960px;
+	width:  850px;
 	min-height: 600px;
 	min-width: 600px;
 	background-image:url('../img/who_is_980.png');
@@ -20,7 +20,7 @@
 	margin-top: 10px;
 	outline: 0;
 	border: 0px;
-	width: 960px;
+	width: 840px;
 	height: 128px;  
 	background-color: transparent;
 	background-image: url("../img/button_980.png");
@@ -30,7 +30,7 @@
 }
 li.selected{
 	border:4px solid red;
-	width: 900px
+	width: 600px
 }
 .btn-center:hover{
 	background-image: url("../img/select_980.png");
@@ -45,20 +45,21 @@ label{
 	min-width: 160px;
 	width:10%;
 }
+.NameHolder{
+	width: 840px;
+	height: 128px;
+	margin-top: 100px;
+	background-repeat: no-repeat;
+	background-image: url("../img/name_980.png");
+}
 #Username{
 	/*font-family: "stencil";*/
 	font-size: 64px;
 	outline: none;
 	border: 0;
 	background-color: transparent;
-	min-width: 960px;
+	min-width: 840px;
 	height: 128px;
 	width:100%;
 	padding-left: 400px;
-}
-.NameHolder{
-	width: 960px;
-	height: 128px;
-	background-repeat: no-repeat;
-	background-image: url("../img/name_980.png");
 }
