--- a/IOS/GearsGameCenter/GearsGameCenter/games/whois/css/1280.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/games/whois/css/1280.css
@@ -3,11 +3,11 @@
 #bodyContainer
 {
 	font-family:  "Comic Sans MS";
-	font-size: 36px;
-	width:  1280px;
+	font-size: 48px;
+	width:  1100px;
 	min-height: 600px;
 	min-width: 600px;
-	background-image:url('../img/who_is_980.png');
+	background-image:url('../img/who_is_1280.png');
 	background-repeat: no-repeat;
 	background-color:#deedd;
 	margin-left:auto;
@@ -15,31 +15,35 @@
 }
 .btn-center
 {
-	font-size: 64px;
+	font-size: 80px;
 	color: #5c6d66;
 	margin-top: 10px;
 	outline: 0;
 	border: 0px;
-	width: 960px;
+	width: 1100px;
 	height: 96px;  
 	background-color: transparent;
-	background-image: url("../img/button_980.png");
+	background-image: url("../img/button_1280.png");
 	background-repeat: no-repeat;
 	
 
 }
 .btn-center:hover{
-	background-image: url("../img/select_980.png");
+	background-image: url("../img/select_1280.png");
 	
 }
 .stage {
-	font-size: 64px;
+	font-size: 80px;
 	padding-top: 480px;
 }
 label{
 	display: inline-block;
 	min-width: 160px;
 	width:10%;
+}
+li.selected{
+	border:2px solid red;
+	width: 500px
 }
 #Username{
 	/*font-family: "stencil";*/
@@ -56,5 +60,5 @@ label{
 	width: 960px;
 	height: 96px;
 	background-repeat: no-repeat;
-	background-image: url("../img/name_980.png");
+	background-image: url("../img/name_1280.png");
 }
